--- a/kurs/templates/base.html
+++ b/kurs/templates/base.html
@@ -1,99 +1,101 @@
 <!Doctype html>
 {% load static %}
 <html>
-	<head>
-		<title>
-			DŁUGI kurs jezyka angielskiego
-		</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<head>
+    <title>
+        DŁUGI kurs jezyka angielskiego
+    </title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-		<link rel="stylesheet" href="{% static 'css/styleMob.css' %}" />
-		<link rel="stylesheet" href="{% static 'css/style.css' %}" />
-		<link rel="stylesheet" href="{% static 'css/style_main_page.css' %}">
-		<link rel="stylesheet" href="{% static 'css/style1280.css' %}" />
-		<script src="{% static 'jq/jquery-3.3.1.min.js' %}"></script>
-		<script src="{% static 'jq/jquery.color-2.1.2.min.js' %}"></script>
-		<script src="{% static 'js/jq.js' %}"></script>
-		<script src="{% static 'js/jq_menuMob.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'css/styleMob.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/style_main_page.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style1280.css' %}"/>
+    <script src="{% static 'jq/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'jq/jquery.color-2.1.2.min.js' %}"></script>
+    <script src="{% static 'js/jq.js' %}"></script>
+    <script src="{% static 'js/jq_menuMob.js' %}"></script>
 
-		<!--	Bootstrap 4.3.1		-->
+    <!--	Bootstrap 4.3.1		-->
 
-		<link rel="stylesheet" href="{% static 'bootstrap-4.3.1-dist/css/bootstrap.css' %}" />
-		<link rel="stylesheet" href="{% static 'bootstrap-4.3.1-dist/css/bootstrap-grid.css' %}" />
-		<script src="{% static 'bootstrap-4.3.1-dist/js/bootstrap.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'bootstrap-4.3.1-dist/css/bootstrap.css' %}"/>
+    <link rel="stylesheet" href="{% static 'bootstrap-4.3.1-dist/css/bootstrap-grid.css' %}"/>
+    <script src="{% static 'bootstrap-4.3.1-dist/js/bootstrap.js' %}"></script>
 
-	</head>
-	<body>
-		<div id="container" class="container col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-			<header>
-				<img src="{% static 'img/logo.png' %}">
-						<div class="avatar">
-							<a href=""><div></div></a>
-							<p></p>
-						</div>
-			</header>
-			<div class="menu_horizontal col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-				<nav class="ham_button ham_button_def col-xl-0 col-lg-0 col-md-12  col-sm-12 col-12">
-				</nav>
-				<div class="menu_horizontal_curent menu_horizontal_mob col-12 col-sm-12 col-md-12 col-xl-2 col-lg-2   ">
-					<a>Main  page</a>
-				</div>
-				<div class="menu_horizontal_mob col-xl-2 col-lg-2 col-md-12 col-sm-12 col-12">
-					<a>Gramar</a>
-					<ul>
-						<li><a href="gramatyka_present_countinuous.php">Present tenses</a></li>
-						<li><a href="lorem_ipsum.php">Past tenses</a></li>
-						<li><a href="lorem_ipsum.php">Future tenses</a></li>
-						<li><a href="lorem_ipsum.php">Modal verbs</a></li>
-					</ul>
-				</div>
-				<div class="menu_horizontal_mob col-xl-2 col-lg-2 col-md-12 col-sm-12 col-12">
-					<a>Vocabulary</a>
-					<ul>
-						<li><a href="czlowiek.php">Human</a></li>
-						<li><a href="lorem_ipsum.php">Home</a></li>
-						<li><a href="lorem_ipsum.php">School</a></li>
-						<li><a href="lorem_ipsum.php">Job</a></li>
-						<li><a href="lorem_ipsum.php">Family and friends</a></li>
-						<li><a href="lorem_ipsum.php">Food</a></li>
-						<li><a href="idiomy.php">Idioms</a></li>
-					</ul>
-				</div>
-				<div class="menu_horizontal_mob col-xl-2 col-lg-2 col-md-12 col-sm-12 col-12">
-					<a>Phonetics</a>
-					<ul>
-						<li><a href="bee.php">Monophtongs</a></li>
-						<li><a href="lorem_ipsum.php">Diphtongs and Triphtongs</a></li>
-						<li><a href="lorem_ipsum.php">Plosives</a></li>
-						<li><a href="lorem_ipsum.php">Fricatives</a></li>
-						<li><a href="lorem_ipsum.php">Liquids and veral nasal</a></li>
-					</ul>
-				</div>
-				<div class="menu_horizontal_mob col-xl-2 col-lg-2 col-md-12 col-sm-12 col-12">
-					<a>Culture</a>
-					<ul>
-						<li><a href="geographical_identities.php">The country</a></li>
-						<li><a href="lorem_ipsum.php">The people</a></li>
-						<li><a href="lorem_ipsum.php">Politics and government</a></li>
-						<li><a href="lorem_ipsum.php">International relations</a></li>
-						<li><a href="lorem_ipsum.php">The legal system</a></li>
-						<li><a href="lorem_ipsum.php">The economy</a></li>
-						<li><a href="lorem_ipsum.php">Social services</a></li>
-						<li><a href="lorem_ipsum.php">Education</a></li>
-						<li><a href="lorem_ipsum.php">The media</a></li>
-						<li><a href="lorem_ipsum.php">Religion</a></li>
-						<li><a href="lorem_ipsum.php">Leisure, sports and the arts</a></li>
-					</ul>
-				</div>
-				<div class="menu_horizontal_mob col-xl-2 col-lg-2 col-md-12 col-sm-12 col-12">
+</head>
+<body>
+<div id="container" class="container col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+    <header>
+        <img src="{% static 'img/logo.png' %}">
+        <div class="avatar">
+            <a href="">
+                <div></div>
+            </a>
+            <p></p>
+        </div>
+    </header>
+    <div class="menu_horizontal col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+        <nav class="ham_button ham_button_def col-xl-0 col-lg-0 col-md-12  col-sm-12 col-12">
+        </nav>
+        <div class="menu_horizontal_curent menu_horizontal_mob col-12 col-sm-12 col-md-12 col-xl-2 col-lg-2   ">
+            <a href="{% url 'home' %}">Main page</a>
+        </div>
+        <div class="menu_horizontal_mob col-xl-2 col-lg-2 col-md-12 col-sm-12 col-12">
+            <a>Gramar</a>
+            <ul>
+                <li><a href="{% url 'gramatyka_present_countinuous' %}">Present tenses</a></li>
+                <li><a href="{% url 'gramar_lorem' %}">Past tenses</a></li>
+                <li><a href="{% url 'gramar_lorem' %}">Future tenses</a></li>
+                <li><a href="{% url 'gramar_lorem' %}">Modal verbs</a></li>
+            </ul>
+        </div>
+        <div class="menu_horizontal_mob col-xl-2 col-lg-2 col-md-12 col-sm-12 col-12">
+            <a>Vocabulary</a>
+            <ul>
+                <li><a href="czlowiek.php">Human</a></li>
+                <li><a href="lorem_ipsum.php">Home</a></li>
+                <li><a href="lorem_ipsum.php">School</a></li>
+                <li><a href="lorem_ipsum.php">Job</a></li>
+                <li><a href="lorem_ipsum.php">Family and friends</a></li>
+                <li><a href="lorem_ipsum.php">Food</a></li>
+                <li><a href="idiomy.php">Idioms</a></li>
+            </ul>
+        </div>
+        <div class="menu_horizontal_mob col-xl-2 col-lg-2 col-md-12 col-sm-12 col-12">
+            <a>Phonetics</a>
+            <ul>
+                <li><a href="bee.php">Monophtongs</a></li>
+                <li><a href="lorem_ipsum.php">Diphtongs and Triphtongs</a></li>
+                <li><a href="lorem_ipsum.php">Plosives</a></li>
+                <li><a href="lorem_ipsum.php">Fricatives</a></li>
+                <li><a href="lorem_ipsum.php">Liquids and veral nasal</a></li>
+            </ul>
+        </div>
+        <div class="menu_horizontal_mob col-xl-2 col-lg-2 col-md-12 col-sm-12 col-12">
+            <a>Culture</a>
+            <ul>
+                <li><a href="geographical_identities.php">The country</a></li>
+                <li><a href="lorem_ipsum.php">The people</a></li>
+                <li><a href="lorem_ipsum.php">Politics and government</a></li>
+                <li><a href="lorem_ipsum.php">International relations</a></li>
+                <li><a href="lorem_ipsum.php">The legal system</a></li>
+                <li><a href="lorem_ipsum.php">The economy</a></li>
+                <li><a href="lorem_ipsum.php">Social services</a></li>
+                <li><a href="lorem_ipsum.php">Education</a></li>
+                <li><a href="lorem_ipsum.php">The media</a></li>
+                <li><a href="lorem_ipsum.php">Religion</a></li>
+                <li><a href="lorem_ipsum.php">Leisure, sports and the arts</a></li>
+            </ul>
+        </div>
+        <div class="menu_horizontal_mob col-xl-2 col-lg-2 col-md-12 col-sm-12 col-12">
 
-				</div>
-			</div>
-            {% block content %}
-            {% endblock %}
-			<footer>
-				<h5>Design & Code by Łukasz Kwaśny & Kamil Dziok</h5>
-			</footer>
-		</div>
-	</body>
+        </div>
+    </div>
+    {% block content %}
+    {% endblock %}
+    <footer>
+        <h5>Design & Code by Łukasz Kwaśny & Kamil Dziok</h5>
+    </footer>
+</div>
+</body>
 </html>
