Prepare static pages

--- a/kurs/templates/base.html
+++ b/kurs/templates/base.html
@@ -52,39 +52,39 @@
         <div class="menu_horizontal_mob col-xl-2 col-lg-2 col-md-12 col-sm-12 col-12">
             <a>Vocabulary</a>
             <ul>
-                <li><a href="czlowiek.php">Human</a></li>
-                <li><a href="lorem_ipsum.php">Home</a></li>
-                <li><a href="lorem_ipsum.php">School</a></li>
-                <li><a href="lorem_ipsum.php">Job</a></li>
-                <li><a href="lorem_ipsum.php">Family and friends</a></li>
-                <li><a href="lorem_ipsum.php">Food</a></li>
-                <li><a href="idiomy.php">Idioms</a></li>
+                <li><a href="{% url 'body_parts' %}">Human</a></li>
+                <li><a href="{% url 'vocabulary_lorem' %}">Home</a></li>
+                <li><a href="{% url 'vocabulary_lorem' %}">School</a></li>
+                <li><a href="{% url 'vocabulary_lorem' %}">Job</a></li>
+                <li><a href="{% url 'vocabulary_lorem' %}">Family and friends</a></li>
+                <li><a href="{% url 'vocabulary_lorem' %}">Food</a></li>
+                <li><a href="{% url 'idiomy'%}">Idioms</a></li>
             </ul>
         </div>
         <div class="menu_horizontal_mob col-xl-2 col-lg-2 col-md-12 col-sm-12 col-12">
             <a>Phonetics</a>
             <ul>
-                <li><a href="bee.php">Monophtongs</a></li>
-                <li><a href="lorem_ipsum.php">Diphtongs and Triphtongs</a></li>
-                <li><a href="lorem_ipsum.php">Plosives</a></li>
-                <li><a href="lorem_ipsum.php">Fricatives</a></li>
-                <li><a href="lorem_ipsum.php">Liquids and veral nasal</a></li>
+                <li><a href="{% url 'bee' %}">Monophtongs</a></li>
+                <li><a href="{% url 'phonetics_lorem' %}">Diphtongs and Triphtongs</a></li>
+                <li><a href="{% url 'phonetics_lorem' %}">Plosives</a></li>
+                <li><a href="{% url 'phonetics_lorem' %}">Fricatives</a></li>
+                <li><a href="{% url 'phonetics_lorem' %}">Liquids and veral nasal</a></li>
             </ul>
         </div>
         <div class="menu_horizontal_mob col-xl-2 col-lg-2 col-md-12 col-sm-12 col-12">
             <a>Culture</a>
             <ul>
-                <li><a href="geographical_identities.php">The country</a></li>
-                <li><a href="lorem_ipsum.php">The people</a></li>
-                <li><a href="lorem_ipsum.php">Politics and government</a></li>
-                <li><a href="lorem_ipsum.php">International relations</a></li>
-                <li><a href="lorem_ipsum.php">The legal system</a></li>
-                <li><a href="lorem_ipsum.php">The economy</a></li>
-                <li><a href="lorem_ipsum.php">Social services</a></li>
-                <li><a href="lorem_ipsum.php">Education</a></li>
-                <li><a href="lorem_ipsum.php">The media</a></li>
-                <li><a href="lorem_ipsum.php">Religion</a></li>
-                <li><a href="lorem_ipsum.php">Leisure, sports and the arts</a></li>
+                <li><a href="{% url 'geographical_identities' %}">The country</a></li>
+                <li><a href="{% url 'culture_lorem' %}">The people</a></li>
+                <li><a href="{% url 'culture_lorem' %}">Politics and government</a></li>
+                <li><a href="{% url 'culture_lorem' %}">International relations</a></li>
+                <li><a href="{% url 'culture_lorem' %}">The legal system</a></li>
+                <li><a href="{% url 'culture_lorem' %}">The economy</a></li>
+                <li><a href="{% url 'culture_lorem' %}">Social services</a></li>
+                <li><a href="{% url 'culture_lorem' %}">Education</a></li>
+                <li><a href="{% url 'culture_lorem' %}">The media</a></li>
+                <li><a href="{% url 'culture_lorem' %}">Religion</a></li>
+                <li><a href="{% url 'culture_lorem' %}">Leisure, sports and the arts</a></li>
             </ul>
         </div>
         <div class="menu_horizontal_mob col-xl-2 col-lg-2 col-md-12 col-sm-12 col-12">
