--- a/kurs/templates/phonetics/lorem.html
+++ b/kurs/templates/phonetics/lorem.html
@@ -1,4 +1,4 @@
-{% extends 'gramar/menu_gramar.html' %}
+{% extends 'phonetics/menu_phonetics.html' %}
 {% load static %}
 {% block body %}
     {% include 'lorem.html' %}
