--- a/kurs/templates/vocabulary/lorem.html
+++ b/kurs/templates/vocabulary/lorem.html
@@ -1,4 +1,4 @@
-{% extends 'gramar/menu_gramar.html' %}
+{% extends 'vocabulary/menu_vocabulary.html' %}
 {% load static %}
 {% block body %}
     {% include 'lorem.html' %}
