--- a/kurs/templates/culture/lorem.html
+++ b/kurs/templates/culture/lorem.html
@@ -1,4 +1,4 @@
-{% extends 'gramar/menu_gramar.html' %}
+{% extends 'culture/menu_culture.html' %}
 {% load static %}
 {% block body %}
     {% include 'lorem.html' %}
