--- a/kurs/templates/index.html
+++ b/kurs/templates/index.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block head %}
+    <link rel="stylesheet" href="{% static 'css/style_main_page.css' %}">
+{% endblock %}
 {% block content %}
 <div class="content col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
     <div class="component">
