--- a/kurs/templates/vocabulary/idiomy.html
+++ b/kurs/templates/vocabulary/idiomy.html
@@ -1,5 +1,8 @@
 {% extends 'vocabulary/menu_vocabulary.html' %}
 {% load static %}
+{% block head_2 %}
+    <link rel="stylesheet" href="{% static 'css/styleMobId.css' %}"/>
+{% endblock %}
 {% block body %}
 <div class="component_right">
     <h1>Idioms</h1>
