--- a/kurs/templates/culture/menu_culture.html
+++ b/kurs/templates/culture/menu_culture.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block head %}
+    <link rel="stylesheet" href="{% static 'css/style_culture.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/styleMobGI.css' %}"/>
+{% endblock %}
 {% block content %}
 <div class="content">
     {% block body %}
